FEAT: add delete user api
